<resources>
    <!--General-->
    <string name="app_name">Michigan Hackers</string>

    <!--Main Activity-->
    <string name="nav_events">Events</string>
    <string name="nav_directory">Members</string>
    <string name="require_play_services">This app requires Google Play Services</string>

    <!--Event Activity-->
    <string name="hacknight_image_description">Hack Night Fractal</string>

    <!--Directory-->
    <string name="member_profile_picture">Member Profile Picture</string>

    <!--Profile Activity-->
    <string name="profile_submit_changes">Submit Changes</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="major_s">Major(s)</string>
    <string name="profile_picture">Profile picture</string>
    <string name="empty_teams_input">Please complete teams field</string>
    <string name="invalid_team_input">is an invalid team</string>
    <string name="empty_majors_input">Please complete majors field</string>
    <string name="invalid_major_input">is an invalid major</string>
    <string name="empty_year_input">Please complete year field</string>
    <string name="empty_title_input">Please complete title field</string>
    <string name="empty_name_input">Please complete name field</string>
    <string name="empty_bio_input">Please complete bio field</string>
    <string name="profile_update_failed">Failed to update profile</string>
    <string name="select_picture">Select Picture</string>
    <string name="team_s">Team(s)</string>

    <!--Login Pages-->
    <string name="hackers_H_description">Michigan Hackers H</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="pwd_too_short">Password too short. Enter minimum 8 characters!</string>
    <string name="auth_failed_login">Authentication failed. Check your email and password or sign up</string>
    <string name="login">Login</string>
    <string name="link_to_register">Not a member? Get registered now!</string>
    <string name="link_to_login">Already registered? Login me in!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">"Enter your registered email and we'll send you instructions to reset your password".</string>
    <string name="pwd_reset_confirmation">We have sent you instructions to reset your password!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="auth_failed_signup">Authentication failed</string>
    <string name="pwd_reset_email_failed">Failed to send reset email!</string>
    <string name="enter_registered_email">Enter your registered email id</string>
    <string name="signed_in_required_messsage">You must sign in to use this feature</string>

    <!--Notifications-->
    <string name="channel_description">Default Michigan Hackers Notification Channel</string>
    <string name="channel_name">Notification Channel</string>

    <!--Settings-->
    <string name="dark_theme">Dark Theme</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="delete">Delete</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="hint_new_email">New Email</string>
    <string name="change">Change</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign Out</string>
    <string name="pref_is_dark_theme_set_key">isDarkThemeSetKey</string>
    <string name="pref_main_settings_key">mainSettingsKey</string>
    <string name="pref_account_settings_key">accountSettingsKey</string>
    <string name="pref_account_sign_out_key">accountSignOutKey</string>
    <string name="failed_to_update_email">Failed to update email</string>
    <string name="current_password">Current Password</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="email_change_success">Successfully changed email</string>
    <string name="passwords_dont_match">Passwords do not match!</string>
    <string name="pwd_change_success">Successfully changed password!</string>
    <string name="pwd_change_failure">Failed to change password!</string>
    <string name="account_delete_warning_message">Are you sure you want to delete your account? This cannot be undone!</string>
    <string name="sign_out_warning_message">Are you sure you want to sign out?</string>
    <string name="post_account_deleted_message">Your profile has been deleted :( Create an account now!</string>

    <!--Mixed-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="settings">Settings</string>

    <!--Auto-generated strings placed here i.e. "alt+enter" shortcut.
     Please move to correct category when finished-->
    <string name="generated_strings_placed_after_this_automatically">.</string>

    <!--String Arrays-->
    <string-array name="year_array">
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Alumnus</item>
    </string-array>

    <string-array name="title_array">
        <item>Member</item>
        <item>Core Member</item>
        <item>Core Leader</item>
    </string-array>

    <string-array name="majors_array">
        <item>Actuarial Mathematics</item>
        <item>Aerospace Engineering</item>
        <item>Afroamerican and African Studies</item>
        <item>American Culture</item>
        <item>Anthropology</item>
        <item>Architecture</item>
        <item>Art and Design</item>
        <item>Arts and Ideas in the Humanities</item>
        <item>Asian Studies</item>
        <item>Astronomy and Astrophysics</item>
        <item>Athletic Training</item>
        <item>Biochemistry</item>
        <item>Biology</item>
        <item>Biology, Health, and Society</item>
        <item>Biomedical Engineering</item>
        <item>Biomolecular Science</item>
        <item>Biophysics</item>
        <item>Biopsychology, Cognition, and Neuroscience</item>
        <item>Business</item>
        <item>Cell and Molecular Biology</item>
        <item>Cell and Molecular Biology and Biomedical Engineering</item>
        <item>Chemical Engineering</item>
        <item>Chemical Science</item>
        <item>Chemistry</item>
        <item>Civil Engineering</item>
        <item>Classical Archaeology</item>
        <item>Classical Civilization</item>
        <item>Classical Languages and Literatures</item>
        <item>Cognitive Science</item>
        <item>Communication Studies</item>
        <item>Community and Global Public Health</item>
        <item>Comparative Culture and Identity</item>
        <item>Comparative Literature</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Creative Writing and Literature</item>
        <item>Dance</item>
        <item>Data Science</item>
        <item>Dental Hygiene</item>
        <item>Drama</item>
        <item>Earth and Environmental Sciences</item>
        <item>Earth System Science and Engineering</item>
        <item>Ecology, Evolution, and Biodiversity</item>
        <item>Economics</item>
        <item>Electrical Engineering</item>
        <item>Elementary Teacher Education</item>
        <item>Engineering Physics</item>
        <item>English</item>
        <item>Environment</item>
        <item>Environmental Engineering</item>
        <item>Evolutionary Anthropology</item>
        <item>Film, Television, and Media</item>
        <item>French and Francophone Studies</item>
        <item>Gender and Health</item>
        <item>General Studies</item>
        <item>German</item>
        <item>Global Environment and Health</item>
        <item>Greek</item>
        <item>Health and Fitness</item>
        <item>History</item>
        <item>History of Art</item>
        <item>Honors Mathematics</item>
        <item>Industrial and Operations Engineering</item>
        <item>Informatics</item>
        <item>Information</item>
        <item>Interarts Performance</item>
        <item>Interdisciplinary Astronomy</item>
        <item>Interdisciplinary Chemical Sciences</item>
        <item>Interdisciplinary Physics</item>
        <item>International Security, Norms, and Cooperation</item>
        <item>International Studies</item>
        <item>Italian</item>
        <item>Jazz Studies</item>
        <item>Judaic Studies</item>
        <item>Latin American and Caribbean Studies</item>
        <item>Latin Language and Literature</item>
        <item>Latina/Latino Studies</item>
        <item>Law, Justice, and Social Change</item>
        <item>Linguistics</item>
        <item>Materials Science and Engineering</item>
        <item>Mathematical Sciences</item>
        <item>Mathematics</item>
        <item>Mathematics of Finance and Risk Management</item>
        <item>Mechanical Engineering</item>
        <item>Microbiology</item>
        <item>Middle East Studies</item>
        <item>Middle Eastern and North African Studies</item>
        <item>Movement Science</item>
        <item>Multidisciplinary Music Studies</item>
        <item>Music</item>
        <item>Music Composition</item>
        <item>Music Education</item>
        <item>Music Performance</item>
        <item>Music Performance with Teacher Certification</item>
        <item>Musical Theatre</item>
        <item>Musicology</item>
        <item>Naval Architecture and Marine Engineering</item>
        <item>Neuroscience</item>
        <item>Nuclear Engineering and Radiological Sciences</item>
        <item>Nursing</item>
        <item>Organizational Studies</item>
        <item>Performing Arts Technology</item>
        <item>Pharmaceutical Sciences</item>
        <item>Philosophy</item>
        <item>Philosophy, Politics, and Economics</item>
        <item>Physics</item>
        <item>Plant Biology</item>
        <item>Polish</item>
        <item>Political Economy and Development</item>
        <item>Political Science</item>
        <item>Psychology</item>
        <item>Public Health Sciences</item>
        <item>Public Policy</item>
        <item>Pure Mathematics</item>
        <item>RC Individual Major Program</item>
        <item>Romance Languages and Literatures</item>
        <item>Russian</item>
        <item>Russian, East European, and Eurasian Studies</item>
        <item>Screenwriting</item>
        <item>Secondary Teacher Education</item>
        <item>Social Theory and Practice</item>
        <item>Sociology</item>
        <item>Sociology of Health and Medicine</item>
        <item>Sound Engineering</item>
        <item>Spanish</item>
        <item>Sport Management</item>
        <item>Statistics</item>
        <item>Structural Biology Track</item>
        <item>Theatre Arts</item>
        <item>Theatre Design and Production</item>
        <item>Theatre Performance</item>
        <item>Undecided</item>
        <item>Women’s Studies</item>
    </string-array>

</resources>