<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_account_settings_key"
    android:title="@string/account">

    <Preference
        android:title="@string/change_email"
        android:icon="?ic_email"
        app:fragment="org.michiganhackers.michiganhackers.settings.ChangeEmailFragment">
    </Preference>

    <Preference
        android:title="@string/change_password"
        android:icon="?ic_key"
        app:fragment="org.michiganhackers.michiganhackers.settings.ChangePasswordFragment">
    </Preference>

    <Preference
        android:title="@string/delete_account"
        android:icon="?ic_delete_forever"
        app:fragment="org.michiganhackers.michiganhackers.settings.DeleteAccountFragment">
    </Preference>

    <Preference
        android:key="@string/pref_account_sign_out_key"
        android:title="@string/sign_out"
        android:icon="?ic_sign_out">
    </Preference>


</PreferenceScreen>
